--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "naruto-rpg-login",
+  "name": "teste-pagina-new-era",
   "version": "1.0.0",
-  "description": "Sistema de login para RPG de Naruto",
+  "description": "Teste de página para o New Era Roleplay",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.11.5"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.2"
   }
 }
