--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Teste de página para o New Era Roleplay",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "next": "^15.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
